# tiff-forge

./: Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: file.rs  lib.rs  write.rs
src/ifd/: ifd.rs  mod.rs  tags.rs  types.rs  values.rs
