[package]
name = "tiff-forge"
version = "0.4.5"
edition = "2024"
authors = [
    "PedroGonçaloCorreia <goncalerta@gmail.com>",
    "Jake Cahill <kaelscion@gmail.com>"
]
license = "MIT"
description = "Rust library for working with TIFF and BigTIFF files."
homepage = "https://github.com/kaelscion/tiff-forge"
repository = "https://github.com/kaelscion/tiff-forge"
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
